k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: wurkah
  template:
    metadata:
      labels:
        component: wurkah
    spec:
      containers:
        - name: worker
          image: antondeswardt/docker-complex-worker
