k8s/client-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
