k8s/postgres-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip
spec:
  type: ClusterIP
  selector:
    component: db
  ports:
    - port: 5432
      targetPort: 5432
