k8s/redis-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-clusterip
spec:
  type: ClusterIP
  selector:
    component: cache
  ports:
    - port: 6379
      targetPort: 6379
