k8s/server-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-clusterip
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 5000
      targetPort: 5000
