k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - greenfigpig.com
        - www.greenfigpig.com
      secretName: greenfigpig-com
  rules:
    - host: greenfigpig.com 
      http:
        paths:
          - path: /
            backend:
              serviceName: client-clusterip
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: server-clusterip
              servicePort: 5000
    - host: www.greenfigpig.com
      http:
        paths:
          - path: /
            backend:
              serviceName: client-clusterip
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: server-clusterip
              servicePort: 5000
